--- a/01/index.html
+++ b/01/index.html
@@ -5,8 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <style>
+      body {
+        margin: 0;
+        background: #000;
+      }
+
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
+    <div id="canvas"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/98/three.min.js"></script>
+    <script>
+      const scene = new THREE.Scene();
+      //2 .그리는 애 추가해주자 :D
+      const renderer = new THREE.WebGLRenderer({
+        alpha: true,
+        antialias: true
+        // antialias: true !!! 깨지는 부분 많이 막아줌 말 그대로 antialias
+      }); // 3d data-> 2d로 render
+
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.getElementById("canvas").appendChild(renderer.domElement);
+
+      const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+
+      var geometry = new THREE.BoxGeometry(1, 1, 1);
+      var material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+      var cube = new THREE.Mesh(geometry, material);
+      scene.add(cube);
+      camera.position.z = 5;
+      var animate = function() {
+        requestAnimationFrame(animate);
+        cube.rotation.x += 0.01;
+        cube.rotation.y += 0.01;
+        // camera.position.z = 10 * Math.random(); pop art 같당 ㅋ.ㅋ
+        renderer.render(scene, camera);
+      };
+      animate();
+    </script>
   </body>
 </html>
